[metadata]
name = async_pushover_client
version = 0.0.1
author = Sergey Yalovoy
author_email = sergeyyolovoi@gmail.com
description = a set of methods for working with PushOver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sergey-Yalovoy/async_pushover_client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    multidict~=6.0.4
    attrs~=23.1.0
    gevent~=23.9.0.post1
    cffi~=1.15.1
    greenlet~=2.0.2
    yarl~=1.9.2
    aiohttp~=3.8.5
    aiosignal~=1.3.1
    frozenlist~=1.4.0
    certifi~=2023.7.22
    urllib3~=2.0.4
    pycparser~=2.21
    websocket~=0.2.1
    zipp~=3.16.2
    websockets~=11.0.3
    requests~=2.31.0
    aiofiles~=23.2.1
    python-dotenv~=1.0.0